MGNLUI-3905 Fix various UI glitches in AdminCentral
- the tabs in Pulse now shrink if a translation's too long
- the buttons in the EditorActionArea stay on one line, also shrink when needed
- alter dialog zoom-in effect in order for it to not show a broken layout after a transition

--- a/magnolia-ui-admincentral/src/main/resources/VAADIN/themes/admincentral/overlay/overlay-admincentral.scss
+++ b/magnolia-ui-admincentral/src/main/resources/VAADIN/themes/admincentral/overlay/overlay-admincentral.scss
@@ -107,7 +107,9 @@
 
 .overlay.open .light .dialog-wrapper{
   @include prefix(animation-duration, 0.4s);
-  @include prefix(animation-name, overlay-zoomin-fadein );
+  // Ideally the dialog should zoom-in/fade-in, but w/out proper handling zoom (scaling) animation may interfere with Vaadin
+  // layouting causing components to be rendered in a flawed state (see MGNLUI-3948)
+  @include prefix(animation-name, overlay-fadein );
 }
 .overlay.close .light .dialog-wrapper{
   @include prefix(animation-duration, 0.3s);
@@ -115,7 +117,7 @@
   @include prefix(animation-fill-mode, forwards);
 }
 
-
+@include keyframesTransformOpacity(overlay-fadein, scale(1.0), scale(1.0), 0, 1.0);
 
 @include keyframesTransformOpacity(overlay-fadein-curtain, scale(1.0), scale(1.0), 0, 0.8);
 
