--- a/magnolia-ui-vaadin-common-widgets/src/main/resources/VAADIN/themes/admincentraltheme/dialog.scss
+++ b/magnolia-ui-vaadin-common-widgets/src/main/resources/VAADIN/themes/admincentraltheme/dialog.scss
@@ -294,8 +294,16 @@
     cursor: pointer;
   }
 
+  .action-shortenable-button {
+    max-width: 100px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+
   .primary-actions{
     text-align: right;
+    overflow: hidden;
   }
 
   .secondary-actions{
